# kali

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  secret.txt
report/: BarashIV.aux  BarashIV.bbl  BarashIV.blg  BarashIV.dvi  BarashIV.out  BarashIV.pdf.sig  BarashIV.ps  BarashIV.tex  books.bib  chess_block_schema
